SV 15/07/2007
- Corrected small bug in GraphFactory.wireRingLattice giving wrong number of
  neighbors for odd k.
- Corrected tiny bug in EDSimulator.nextExperiment ensuring that 8<=rbits<64.

SV 18/05/2007
- Updated core.Scheduler, to allow more flexible schedules.
  It is now possible to define final-only schedules. For ED, simply
  define "FINAL", but not "step". For CD, define "FINAL", and "at -1", or
  "until -1".
- Added more checking in core.Scheduler. An exception is thrown if "at" and
  "from", "until", or "step" are defined at the same time. In ED it is possible
  to omit "step", in order to define final-only schedules. But if "from" or
  "until" are defined while "step" is missing, a warning will be printed.
  A warning will also print if the defined schedule results in no single
  execution.
- Fixed bug in edsim.ControlEvent, which was executing a control even if its
  time was negative.
- Fixed a large number of small typos in various files (in comments).

MJ 29/03/2007
- Bug fixed: was not possible to add nodes to an empty network (how strange
  this bug came out so late...; in any case, fixed now).
  (credit goes to Samuel Bernard)

AM 05/04/2006
VERSION 1.0.2 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

AM 04/04/2007:
- Solved a bug in RangeSimulator: creation of several processes may 
  end up in "too many files" errors due to the fact stdin, stderr and
  stdout files are not closed when a process terminates. See 
  http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4784692
	http://www.thescripts.com/forum/thread18019.html
- Changed peersim.config.Operators, peersim.vector.Getter, 
  peersim.vector.Setter to public, to enable classes
  external to the package to use their functionalities.
- Reverted peersim.vector.Observer to the version of 1.0.1; the
  functionalities introduced with previous changes will be